Added HTML structure until eyecatcher segment

--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
         <meta charset="UTF-8">
     </head>
     <body>
-
+        <header>
+            <h1>Header Logo</h1>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </header>
+        <div class="content">
+            <div class="eyecatcher">
+                <div class="eyecatchertext">
+                    <h2>This website is awesome</h2>
+                    <p>This website has some subtext that goes here under the main title. It is a smaller font and the colour is lower contrast.</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="eyecatcherimg">
+                    <img src="#">
+                </div>
+            </div>
+            <div class="info"></div>
+            <div class="quote"></div>
+            <div class="calltoaction"></div>
+        </div>
+        <footer></footer>
     </body>
 </html>
